tests/NormalTests/paczka1/small_fuzzy/14906543.err
Error in line 10: eufTZdAWJi A735 36,4
Error in line 6: xPSC A207 74,5
